--- a/index.html
+++ b/index.html
@@ -1,79 +1,192 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="robots" content="noindex">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+	<title>Fashion King</title>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Github2 : ">
+	<style>
+		a{color: white;
+		text-decoration: none;}
+		#banner {
+				position: fixed;
+				z-index: 100;
+				top: 0%;
+				left: 0%;
+				background-color: black;
+				color: white;
+				width: 100%;
+				height: 9%;}
+		#story{position: absolute;
+				margin-top: -55px;}
+		#people{position: absolute;
+				margin-top: -55px;}
+		#webtoon{position: absolute;
+				margin-top: -55px;}
+		.same3 {position: absolute;
+				top: 65px;
+				right: 60px;
+				font-size: 3pt;}
+		@media screen and (min-width:301px) and (max-width:500px){
+			.same1 {
+					width: 40%;
+					margin-left: 7%;
+					margin-top: 3%;}
+			.same2 {font-size: 0.9em;
+					margin-left: 10px;}
+			#main_logo {visibility: hidden;}
+			#story{position: absolute;
+				margin-left: 5%;}
+			#people{position: absolute;
+				margin-left: 45%;}
+			#webtoon{position: absolute;
+				margin-left: 75%;}
+			#inner {visibility: hidden;}
+			#logo {margin-top: -1350px;}
+			#logo-1{width: 100%;}
+			#center {margin-top: 0px;}
+			#img_main{width: 85%;}
+			#btn_left {width: 5%;}
+			#btn_right {width: 5%;}
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	
+		}
+		@media screen and (min-width:501px) and (max-width:900px){
+			.same1 {width: 20%;
+					margin-left: 2%;
+					margin-top: 3%;}
+			.same2 {font-size: 0.95em;}
+			#story{position: absolute;
+				margin-left: 25%;}
+			#people{position: absolute;
+				margin-left: 55%;}
+			#webtoon{position: absolute;
+				margin-left: 85%;}
+			#inner {margin-top: 100px;}
+			#leftImg{width: 40%;}
+			#rightImg{width: 40%;
+						margin-left: 15%;}
+			#logo {margin-top: -60%;
+					margin-left: 35%;}
+			#logo-1 {width: 55%;}
+			#center {margin-top: 10px;}
+			#img_main{width: 55%;}
+			#btn_left {width: 5%;
+						margin-left: 18%;}
+			#btn_right {width: 5%;}
 
-    <title>Github2</title>
-  </head>
 
-  <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/Kimbyungwook/Github2">View on GitHub</a>
+		}
+		@media screen and (min-width:901px){
+			
+		
+		#inner {margin-top: 100px;}
+		
 
-          <h1 id="project_title">Github2</h1>
-          <h2 id="project_tagline"></h2>
+		#logo{
+			margin-top: -50%;
+			margin-left: 35%;
+			margin-right: 35%;
+		}
+		#logo-1{
+			width: 100%;}
+		#center {margin-left: 25%;
+				margin-top: 0%;}
+		#img_main{width: 62%;}
+		#leftImg{width: 30%}
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Kimbyungwook/Github2/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Kimbyungwook/Github2/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+		#rightImg {margin-left: 35%;
+			width: 30%;}
+		
+		#thumbnail {margin-top: 5%;
+					margin-left: 5%;
+					margin-right: 5%;}
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+			.same1 {width: 17%;
+					margin-left: 2%;}
+			.same2 {font-size: 1em;}
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+		#story{position: absolute;
+				margin-top: -55px;
+				margin-left: 25%;}
+		#people{position: absolute;
+				margin-top: -55px;
+				margin-left: 60%;}
+		#webtoon{position: absolute;
+				margin-top: -55px;
+				margin-left: 85%;}
+		} 
+	</style>
+	<script type="text/javascript">
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+		var myImg  = new Array(); 
+		var imgNum = 8;			
+		var position = 0;	
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+		for(var i=0; i<imgNum; i++) {
+			myImg[i] = "img/thumb_" + (i+1) + ".jpg";
+		}
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+		function changeImg(num) {
+			document.getElementById("img_main").src = myImg[num - 1];
+			position = num;
+		}
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+		function prev() {
+			position--;
+			if(position < 0) position = myImg.length - 1;
+			document.getElementById("img_main").src = myImg[position];
+		}
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+		function next() {
+			position++;
+			if(position > myImg.length - 1) position = 0;
+			document.getElementById("img_main").src = myImg[position];
+		}
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+	</script>
+</head>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<body background = "img/back.png">
+	<div>
+		
+		<div id ="banner">
+			<a href ="index.html"><img id = "main_logo" src ="img/logo.png" width ="130px"></a>
+			<a class="same2" href ="story.html"><h1 id ="story">스토리</h1></a>
+			<a class="same2" href = "people.html"><h1 id ="people">인물</h1>
+			<a class="same3"><h1 id ="webtoon"><i><u>김,환제작</u></i></h1></a>
+		</div>
+		
+		<div id="inner">
+			<img id="leftImg" src ="img/main_left.png" width ="400px">
+			<img id="rightImg" src ="img/main_right.png" width ="400px">
+		</div>
+		<div id = "logo">
+			<img id="logo-1" src ="img/main_logo.png" width ="400px">
+		</div>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+		<div id="center">
+			<img id="btn_left" src="img/btn_left.png" onclick="prev()"/>
+				<img id="img_main" src="img/thumb_1.jpg" width = "580px">
+				<img id="btn_right" src="img/btn_right.png" onclick="next()"/>
+		</div>
+	</div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Github2 maintained by <a href="https://github.com/Kimbyungwook">Kimbyungwook</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+	<div id="thumbnail">
+				<img class = "same1" src = "img/thumb_1.jpg" width = "130px" onmouseover="changeImg(1)">
+				<img class = "same1" src = "img/thumb_2.jpg" width = "130px" onmouseover="changeImg(2)">
+				<img class = "same1" src = "img/thumb_3.jpg" width = "130px" onmouseover="changeImg(3)">
+				<img class = "same1" src = "img/thumb_4.jpg" width = "130px" onmouseover="changeImg(4)">
+				<img class = "same1" src = "img/thumb_5.jpg" width = "130px" onmouseover="changeImg(5)">
+				<img class = "same1" src = "img/thumb_6.jpg" width = "130px" onmouseover="changeImg(6)">
+				<img class = "same1" src = "img/thumb_7.jpg" width = "130px" onmouseover="changeImg(7)">
+				<img class = "same1" src = "img/thumb_8.jpg" width = "130px" onmouseover="changeImg(8)">
+	</div>
+</div>
+</body>
 
-    
-
-  </body>
 </html>
